# gnome-logs

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-logs.doap  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Logs.json
data/: appmenu.ui  gl-categorylist.ui  gl-eventtoolbar.ui  gl-eventview.ui  gl-eventviewdetail.ui  gl-eventviewlist.ui  gl-searchpopover.ui  gl-style.css  gl-window.ui  gnome-logs.appdata.xml.in  gnome-logs.desktop.in  gnome-logs.gresource.xml  gnome-logs.xml  help-overlay.ui  menus.ui  meson.build  org.gnome.Logs.appdata.xml.in  org.gnome.Logs.desktop.in  org.gnome.Logs.gresource.xml  org.gnome.Logs.gschema.xml  org.gnome.Logs.metainfo.xml.in  org.gnome.Logs.service.in  style-hc.css  style.css
data/icons/: Makefile.am  meson.build
help/: LINGUAS  Makefile.am  meson.build
help/C/: index.page  introduction.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
m4/: behave-installed-tests.m4
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  an.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  (+35 more)
src/: gl-application.c  gl-application.h  gl-categorylist.c  gl-categorylist.h  gl-eventtoolbar.c  gl-eventtoolbar.h  gl-eventview.c  gl-eventview.h  gl-eventviewdetail.c  gl-eventviewdetail.h  gl-eventviewlist.c  gl-eventviewlist.h  gl-eventviewrow.c  gl-eventviewrow.h  gl-journal-model.c  gl-journal-model.h  gl-journal.c  gl-journal.h  gl-main.c  gl-searchpopover.c  gl-searchpopover.h  gl-util.c  gl-util.h  gl-window.c  gl-window.h  meson.build
tests/: basic.py  common_steps.py  environment.py  general.feature  gl-journal-mock.c  gl-journal-mock.h  gl-mock-journal.c  gl-mock-journal.h  gnome-logs-behave-test.c  gnome-logs-test.c  meson.build  shortcuts.feature  test-gl-util.c
tests/steps/: general.py  util.py
